Started working on the PWA and fixed some CSS issues on mobile that I'd never notice

--- a/src/App.scss
+++ b/src/App.scss
@@ -36,7 +36,7 @@
 h1{font-size: 3.6em;}
 h2{font-size: 2.7em;}
 p{
-  font-size: 2.4em;
+  font-size: 2em;
   padding-bottom: 15px;
 }
 a{ color:var(--font_color); }
